# enterprise-observability-blueprint

./: .editorconfig  .gitignore  Makefile  README.md
.cursor/analysis/: full-audit-2026-02-28.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
deploy/docker-compose/: docker-compose.yaml  loki.yaml  prometheus.yml  tempo.yaml
docs/adrs/: 0001-use-opentelemetry-as-standard.md  0002-red-use-models-for-dashboards.md  0003-span-derived-metrics-for-red-dashboards.md
grafana/dashboards/: business-metrics.json  pipeline-health.json  red-use-model.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
instrumentation/go-service/: Dockerfile  go.mod  go.sum  main.go
instrumentation/rust-service/: Cargo.toml  Dockerfile
instrumentation/rust-service/src/: main.rs
otelcol/: config.yaml
