[package]
name = "rust-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "metrics", "grpc-tonic", "reqwest-client"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
rand = "0.10.0"
reqwest = "0.13.2"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.22"
